add register company endpoint
